fix(main.css): remove vuetify scrollbar

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,6 +2,8 @@
 @tailwind components;
 @tailwind utilities;
 
+html { overflow-y: auto }
+
 body {
   @apply text-primary;
   color: #212529;
